[package]
name = "tiktoklive_saver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
indicatif = { version = "0.17", features = ["improved_unicode"] }
chrono = "0.4"
ureq = { version = "2.6.2", features = ["serde_json"] }

